feat: add like/unlike functions